k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myflix
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
