k8s/prod/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: myflix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      serviceAccountName: myflix-app
      containers:
        - name: worker
          image: <aws_account_id>.dkr.ecr.<region>.amazonaws.com/myflix-prod-app:latest
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1500m"
              memory: "1Gi"
